--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ h5py==2.10.0
 numpy==1.17.0
 Pillow==8.1.1
 tensorflow
-flask-uploads
+git+https://github.com/maxcountryman/flask-uploads.git@f66d7dc
 Flask==1.1.2
 Flask-Reuploaded==0.3.2
 Flask-RESTful
